--- a/Project.toml
+++ b/Project.toml
@@ -17,14 +17,17 @@ TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
+ArraysOfArrays = "0.5, 0.6"
+IntervalSets = "0.7"
+LegendHDF5IO = "0.1.3"
+LsqFit = "0.13"
+RecipesBase = "1.3"
+Rotations = "1.3"
+StaticArrays = "1.5"
+Tables = "1.10"
+TypedTables = "1.4"
+Unitful = "1.12"
 julia = "1"
-
-[extras]
-Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-
-[targets]
-test = ["Pkg", "Test"]
 
 [extras]
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
