--- a/Project.toml
+++ b/Project.toml
@@ -8,10 +8,12 @@ IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
 LegendHDF5IO = "c9265ca6-b027-5446-b1a4-febfa8dd10b0"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
+RadiationSpectra = "4f207c7e-01da-51d7-a1a0-c8c06dd1d883"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
@@ -21,9 +23,11 @@ ArraysOfArrays = "0.5, 0.6"
 IntervalSets = "0.7"
 LegendHDF5IO = "0.1.3"
 LsqFit = "0.13"
+RadiationSpectra = "0.5"
 RecipesBase = "1.3"
 Rotations = "1.3"
 StaticArrays = "1.5"
+StatsBase = "0.33"
 Tables = "1.10"
 TypedTables = "1.4"
 Unitful = "1.12"
