--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 
 [deps]
 ArraysOfArrays = "65a8f2f4-9b39-5baf-92e2-a9cc46fdf018"
+DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
 IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
 LegendHDF5IO = "c9265ca6-b027-5446-b1a4-febfa8dd10b0"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -20,6 +21,7 @@ Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
 ArraysOfArrays = "0.5, 0.6"
+DSP = "0.7"
 IntervalSets = "0.7"
 LegendHDF5IO = "0.1.3"
 LsqFit = "0.13"
