--- a/Project.toml
+++ b/Project.toml
@@ -26,6 +26,7 @@ DSP = "0.7"
 IntervalSets = "0.7"
 LegendHDF5IO = "0.1.3"
 LsqFit = "0.13"
+ProgressMeter = "1"
 RadiationSpectra = "0.5"
 RecipesBase = "1.3"
 Rotations = "1.3"
