Add RadiationDetectorDSP to dependencies

--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ LegendHDF5IO = "c9265ca6-b027-5446-b1a4-febfa8dd10b0"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+RadiationDetectorDSP = "afd6e06f-c550-5763-af36-7391d39e46ec"
 RadiationSpectra = "4f207c7e-01da-51d7-a1a0-c8c06dd1d883"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
@@ -27,6 +28,7 @@ IntervalSets = "0.7"
 LegendHDF5IO = "0.1.3"
 LsqFit = "0.13"
 ProgressMeter = "1"
+RadiationDetectorDSP = "0.1"
 RadiationSpectra = "0.5"
 RecipesBase = "1.3"
 Rotations = "1.3"
