--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
@@ -34,6 +35,7 @@ RecipesBase = "1.3"
 Rotations = "1.3"
 StaticArrays = "1.5"
 StatsBase = "0.33"
+StructArrays = "0.6"
 Tables = "1.10"
 TypedTables = "1.4"
 Unitful = "1.12"
