--- a/Project.toml
+++ b/Project.toml
@@ -29,7 +29,7 @@ IntervalSets = "0.7"
 LegendHDF5IO = "0.1.3"
 LsqFit = "0.13"
 ProgressMeter = "1"
-RadiationDetectorDSP = "0.1"
+RadiationDetectorDSP = "0.1, 0.2"
 RadiationSpectra = "0.5"
 RecipesBase = "1.3"
 Rotations = "1.3"
@@ -42,9 +42,9 @@ Unitful = "1.12"
 julia = "1"
 
 [extras]
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
-Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 
 [targets]
 test = ["Test", "Unitful", "Pkg"]
